# PPOIS-labs-spring-2023

LR2/: .gitignore  README.md  createDMG  pyproject.toml
LR2/lab2/: main.py
LR2/lab2/app/: app.py
LR2/lab2/app/db/: config.py  connect.py
LR2/lab2/app/services/: action.py  controller.py  customers_repository.py  model.py  orm_models.py  template_data.py
LR2/lab2/app/view/: erroro_view.py  view.py
LR2/postgres-db/: docker-compose.yml  init.sql
LR4/: .gitignore  README.md  cheme.drawio  pyproject.toml
LR4/lab4/: start_cli.py  start_gui.py
LR4/lab4/cli/: __init__.py  application_cli.py  command_handler.py  exceptions.py  handlers.py
LR4/lab4/core/: config.py  controller.py  db_engine.py  exceptions.py  model.py  repository.py  state.json  state.py  state.yaml
LR4/lab4/core/dto/: dto.py
LR4/lab4/core/repositories/: abstract_repository.py  card_account_repository.py  card_repository.py  transfer_repository.py
LR4/lab4/core/serializers/: __init__.py  engine.py  json_engine.py  yaml_engine.py
LR4/lab4/gui/: __init__.py  application_gui.py  view.py
LR4/lab4/gui/components/: account_info.py  authorization.py  dialog.py  operations.py  phone_payment.py  transfers_info.py  withdrawal.py
LR4/lab4/postgres-db/: docker-compose.yml
LR4/lab4/server/: config.py  db_engine.py  dto.py  log_config.py  main.py  tables.py
LR4/lab4/server/config/: __init__.py  log_config.py
LR4/lab4/server/controllers/: __init__.py  accounts.py  cards.py  (+1 more)
LR4/server/: main.py  models.py
LR4/server/migrations/: env.py
LR4/server/repositories/: card_repository.py
(+26 files in other folders)
