[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Levkov Gleb <Glebchanskiy@yandex.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kivy = "^2.1.0"
kivymd = "^1.1.1"
sqlalchemy = "^2.0.4"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "lab2.main:main"
